setup clickhouse_grpc.proto

--- a/clickhouse-native-jdbc/pom.xml
+++ b/clickhouse-native-jdbc/pom.xml
@@ -112,6 +112,10 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.xolstice.maven.plugins</groupId>
+                <artifactId>protobuf-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
