--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
         <slf4j.version>1.7.30</slf4j.version>
         <scala.version>2.12.10</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
-        <spark.version>3.0.2</spark.version>
+        <spark.version>3.1.0</spark.version>
         <hikari.version>3.4.5</hikari.version>
         <alibaba.druid.version>1.2.4</alibaba.druid.version>
         <dbcp2.version>2.8.0</dbcp2.version>
@@ -648,6 +648,12 @@
             <id>spark-3.0</id>
             <properties>
                 <spark.version>3.0.2</spark.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>spark-3.1</id>
+            <properties>
+                <spark.version>3.1.0</spark.version>
             </properties>
         </profile>
         <profile>
