--- a/clickhouse-integration/pom.xml
+++ b/clickhouse-integration/pom.xml
@@ -43,4 +43,16 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>spark-3.1</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>clickhouse-integration-spark3</module>
+            </modules>
+        </profile>
+    </profiles>
 </project>
